Change arguments to decimal() to be int64_t. They need to be able to hold disk sector numbers > 2^31 and also -1. Should fix PR/34807